# personal_site_email_client

./: .gitignore  Cargo.toml  README.md  package.json  serverless.yml  test_client.json
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
__tests__/: testClient.json
src/: main.rs
